// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Brand story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon modal__close-icon--brand"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="4"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header modal-header--brand"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
    <div
      class="modal-header__brand-asset"
    >
      <div
        class="fpo"
        style="width: 100%; height: 100%;"
      >
        Brand Asset
      </div>
    </div>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Default story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="1"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal DefaultInteractive story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-3"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  id="headlessui-dialog-1"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="modal__overlay"
    data-headlessui-state="open"
    id="headlessui-dialog-overlay-2"
  />
  <div
    class="modal__content modal__content--md modal__content--lg"
  >
    <button
      class="modal__close-button"
      tabindex="0"
    >
      <svg
        class="icon modal__close-icon"
        fill="currentColor"
        height="1.5rem"
        role="img"
        style="--icon-size: 1.5rem;"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="17"
        >
          close modal
        </title>
        <use
          xlink:href="test-file-stub#close"
        />
      </svg>
    </button>
    <div
      class="modal-header"
    >
      <h2
        class="heading heading--size-headline-md"
        data-headlessui-state="open"
        id="headlessui-dialog-title-3"
      >
        Modal Title
      </h2>
    </div>
    <div
      class="modal-body"
    >
      Modal content.
    </div>
    <div
      class="modal-footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          Button 1
        </button>
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
          data-bootstrap-override="clickable-style-primary"
          type="button"
        >
          Button 2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal Medium story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="2"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Mobile story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="5"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal MobileBrand story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon modal__close-icon--brand"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="7"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header modal-header--brand"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
    <div
      class="modal-header__brand-asset"
    >
      <div
        class="fpo"
        style="width: 100%; height: 100%;"
      >
        Brand Asset
      </div>
    </div>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal MobileLandscape story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="6"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal MobileLandscapeBrand story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon modal__close-icon--brand"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="8"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header modal-header--brand"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
    <div
      class="modal-header__brand-asset"
    >
      <div
        class="fpo"
        style="width: 100%; height: 100%;"
      >
        Brand Asset
      </div>
    </div>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal ModalStepper story renders snapshot 1`] = `
<div
  class="modal-stepper"
  data-testid="non-interactive"
>
  <svg
    class="icon"
    fill="currentColor"
    height="0.5rem"
    role="img"
    style="--icon-size: 0.5rem;"
    width="0.5rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="21"
    >
      Active Step 1
    </title>
    <use
      xlink:href="test-file-stub#circle"
    />
  </svg>
  <svg
    class="icon"
    fill="currentColor"
    height="0.5rem"
    role="img"
    style="--icon-size: 0.5rem;"
    width="0.5rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="22"
    >
      Step 2
    </title>
    <use
      xlink:href="test-file-stub#empty-circle"
    />
  </svg>
  <svg
    class="icon"
    fill="currentColor"
    height="0.5rem"
    role="img"
    style="--icon-size: 0.5rem;"
    width="0.5rem"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="23"
    >
      Step 3
    </title>
    <use
      xlink:href="test-file-stub#empty-circle"
    />
  </svg>
</div>
`;

exports[`Modal Small story renders snapshot 1`] = `
<div
  class="modal__content"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="3"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal Tablet story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="9"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal TabletBrand story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon modal__close-icon--brand"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="10"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header modal-header--brand"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
    <div
      class="modal-header__brand-asset"
    >
      <div
        class="fpo"
        style="width: 100%; height: 100%;"
      >
        Brand Asset
      </div>
    </div>
  </div>
  <div
    class="modal-body"
  >
    Modal content.
  </div>
  <div
    class="modal-footer"
  >
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal WithLongText story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-6"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  id="headlessui-dialog-4"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="modal__overlay"
    data-headlessui-state="open"
    id="headlessui-dialog-overlay-5"
  />
  <div
    class="modal__content modal__content--md modal__content--lg"
  >
    <button
      class="modal__close-button"
      tabindex="0"
    >
      <svg
        class="icon modal__close-icon"
        fill="currentColor"
        height="1.5rem"
        role="img"
        style="--icon-size: 1.5rem;"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="18"
        >
          close modal
        </title>
        <use
          xlink:href="test-file-stub#close"
        />
      </svg>
    </button>
    <div
      class="modal-header"
    >
      <h2
        class="heading heading--size-headline-md"
        data-headlessui-state="open"
        id="headlessui-dialog-title-6"
      >
        Modal Title
      </h2>
    </div>
    <div
      class="modal-body"
    >
      <div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam diam quis dolor maximus, non tincidunt lacus facilisis. Praesent ac vestibulum diam. Sed ac orci fringilla, ullamcorper quam nec, elementum turpis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur et vulputate leo. Phasellus convallis ante at augue iaculis, quis consectetur dolor placerat. Nulla ornare malesuada elit eu faucibus. Mauris ultricies tincidunt eleifend. Aliquam erat volutpat. Morbi nec ipsum sed sem facilisis tristique nec et ligula. Vivamus id feugiat sapien.
        </p>
        <p>
          Nam ac tincidunt arcu. Nam non metus sem. Morbi eleifend metus vel venenatis accumsan. Vestibulum pharetra, ante quis sollicitudin aliquam, orci ex pretium ipsum, congue rhoncus dui orci sed velit. Cras ac leo vel massa rutrum auctor eget sed orci. Aenean id nisi consectetur, dapibus tellus ut, finibus metus. Integer tristique est vitae lectus suscipit, ut vulputate est fringilla. Donec pharetra facilisis erat at venenatis. Etiam faucibus dignissim leo eget congue. Sed vehicula imperdiet neque id gravida. Proin volutpat tortor quis quam molestie, faucibus condimentum ante sagittis. Suspendisse sit amet luctus tellus. Suspendisse a sapien hendrerit eros dictum faucibus. Vivamus pretium vel sem faucibus tristique. Integer iaculis pellentesque nunc ac pellentesque.
        </p>
        <p>
          Integer mollis, urna eget sollicitudin laoreet, nunc elit facilisis urna, ut finibus est mi eu quam. Nam ac venenatis massa. Vestibulum suscipit ac ligula venenatis scelerisque. Fusce rutrum nulla lectus, sed dignissim ipsum faucibus sodales. Suspendisse id aliquet quam. Maecenas facilisis mauris dolor, id accumsan ex vehicula in. In nisl ligula, fringilla in enim nec, lobortis sollicitudin purus. Aliquam vehicula euismod enim quis finibus. Fusce ornare tortor malesuada, consequat magna quis, porta dolor. Donec quis nisl ac sem dictum semper quis vel turpis. Proin sed leo in ante rhoncus pellentesque a eu urna. Phasellus consequat lectus et hendrerit luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <p>
          Suspendisse vitae eros elit. Maecenas id urna tempus, tempus turpis id, blandit turpis. Fusce augue quam, pellentesque et suscipit consectetur, pharetra in mi. Suspendisse non ultricies purus. Integer dignissim condimentum sem ac porta. Vivamus viverra congue massa, vitae fermentum est scelerisque et. Duis a urna vitae odio semper dictum a sed nisl. In fringilla hendrerit massa, at luctus arcu tincidunt nec. Donec gravida, mauris sit amet porta lobortis, justo sem vehicula ipsum, at pretium sem leo sed libero. Morbi tristique rhoncus suscipit. Nullam at malesuada sapien. Nam in egestas tellus. Nulla quis metus dui. Suspendisse sit amet nisi at lectus ultricies egestas.
        </p>
        <p
          class="long-text__last-paragraph"
        >
          Integer pulvinar felis sit amet dignissim fermentum. Nulla sodales enim mi, varius feugiat sapien congue eget. Morbi vitae ipsum non ligula eleifend molestie. Aenean bibendum tortor sapien, quis volutpat ante ultricies id. Morbi varius dolor ac ante posuere, sit amet tincidunt lectus pulvinar. Proin id efficitur neque. Nullam vel feugiat dui. Curabitur imperdiet lacinia eros, ac iaculis odio. Praesent quis pretium sapien, quis posuere lectus. Proin eleifend purus nec massa aliquam commodo. Quisque auctor suscipit ex sed tristique. Sed eget ultrices est. Suspendisse nunc justo, dapibus at eros ac, rutrum vestibulum est.
        </p>
      </div>
    </div>
    <div
      class="modal-footer"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          Button 1
        </button>
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
          data-bootstrap-override="clickable-style-primary"
          type="button"
        >
          Button 2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal WithLongTextScrollable story renders snapshot 1`] = `
<div
  aria-labelledby="headlessui-dialog-title-9"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  id="headlessui-dialog-7"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="modal__overlay"
    data-headlessui-state="open"
    id="headlessui-dialog-overlay-8"
  />
  <div
    class="modal__content modal__content--scrollable modal__content--md modal__content--lg"
  >
    <button
      class="modal__close-button"
      tabindex="0"
    >
      <svg
        class="icon modal__close-icon"
        fill="currentColor"
        height="1.5rem"
        role="img"
        style="--icon-size: 1.5rem;"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="19"
        >
          close modal
        </title>
        <use
          xlink:href="test-file-stub#close"
        />
      </svg>
    </button>
    <div
      class="modal-header"
    >
      <h2
        class="heading heading--size-headline-md"
        data-headlessui-state="open"
        id="headlessui-dialog-title-9"
      >
        Modal Title
      </h2>
    </div>
    <div
      class="modal-body"
      tabindex="0"
    >
      <div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam diam quis dolor maximus, non tincidunt lacus facilisis. Praesent ac vestibulum diam. Sed ac orci fringilla, ullamcorper quam nec, elementum turpis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur et vulputate leo. Phasellus convallis ante at augue iaculis, quis consectetur dolor placerat. Nulla ornare malesuada elit eu faucibus. Mauris ultricies tincidunt eleifend. Aliquam erat volutpat. Morbi nec ipsum sed sem facilisis tristique nec et ligula. Vivamus id feugiat sapien.
        </p>
        <p>
          Nam ac tincidunt arcu. Nam non metus sem. Morbi eleifend metus vel venenatis accumsan. Vestibulum pharetra, ante quis sollicitudin aliquam, orci ex pretium ipsum, congue rhoncus dui orci sed velit. Cras ac leo vel massa rutrum auctor eget sed orci. Aenean id nisi consectetur, dapibus tellus ut, finibus metus. Integer tristique est vitae lectus suscipit, ut vulputate est fringilla. Donec pharetra facilisis erat at venenatis. Etiam faucibus dignissim leo eget congue. Sed vehicula imperdiet neque id gravida. Proin volutpat tortor quis quam molestie, faucibus condimentum ante sagittis. Suspendisse sit amet luctus tellus. Suspendisse a sapien hendrerit eros dictum faucibus. Vivamus pretium vel sem faucibus tristique. Integer iaculis pellentesque nunc ac pellentesque.
        </p>
        <p>
          Integer mollis, urna eget sollicitudin laoreet, nunc elit facilisis urna, ut finibus est mi eu quam. Nam ac venenatis massa. Vestibulum suscipit ac ligula venenatis scelerisque. Fusce rutrum nulla lectus, sed dignissim ipsum faucibus sodales. Suspendisse id aliquet quam. Maecenas facilisis mauris dolor, id accumsan ex vehicula in. In nisl ligula, fringilla in enim nec, lobortis sollicitudin purus. Aliquam vehicula euismod enim quis finibus. Fusce ornare tortor malesuada, consequat magna quis, porta dolor. Donec quis nisl ac sem dictum semper quis vel turpis. Proin sed leo in ante rhoncus pellentesque a eu urna. Phasellus consequat lectus et hendrerit luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <p>
          Suspendisse vitae eros elit. Maecenas id urna tempus, tempus turpis id, blandit turpis. Fusce augue quam, pellentesque et suscipit consectetur, pharetra in mi. Suspendisse non ultricies purus. Integer dignissim condimentum sem ac porta. Vivamus viverra congue massa, vitae fermentum est scelerisque et. Duis a urna vitae odio semper dictum a sed nisl. In fringilla hendrerit massa, at luctus arcu tincidunt nec. Donec gravida, mauris sit amet porta lobortis, justo sem vehicula ipsum, at pretium sem leo sed libero. Morbi tristique rhoncus suscipit. Nullam at malesuada sapien. Nam in egestas tellus. Nulla quis metus dui. Suspendisse sit amet nisi at lectus ultricies egestas.
        </p>
        <p
          class="long-text__last-paragraph"
        >
          Integer pulvinar felis sit amet dignissim fermentum. Nulla sodales enim mi, varius feugiat sapien congue eget. Morbi vitae ipsum non ligula eleifend molestie. Aenean bibendum tortor sapien, quis volutpat ante ultricies id. Morbi varius dolor ac ante posuere, sit amet tincidunt lectus pulvinar. Proin id efficitur neque. Nullam vel feugiat dui. Curabitur imperdiet lacinia eros, ac iaculis odio. Praesent quis pretium sapien, quis posuere lectus. Proin eleifend purus nec massa aliquam commodo. Quisque auctor suscipit ex sed tristique. Sed eget ultrices est. Suspendisse nunc justo, dapibus at eros ac, rutrum vestibulum est.
        </p>
      </div>
    </div>
    <div
      class="modal-footer modal-footer--sticky"
    >
      <div
        class="button-group button-group--spacing-1x footer__button-group"
      >
        <button
          class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
          data-bootstrap-override="clickable-style-secondary"
          type="button"
        >
          Button 1
        </button>
        <button
          class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
          data-bootstrap-override="clickable-style-primary"
          type="button"
        >
          Button 2
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Modal WithStepper story renders snapshot 1`] = `
<div
  class="modal__content modal__content--md modal__content--lg"
  data-testid="non-interactive"
  open=""
>
  <button
    class="modal__close-button"
  >
    <svg
      class="icon modal__close-icon"
      fill="currentColor"
      height="1.5rem"
      role="img"
      style="--icon-size: 1.5rem;"
      width="1.5rem"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="11"
      >
        close modal
      </title>
      <use
        xlink:href="test-file-stub#close"
      />
    </svg>
  </button>
  <div
    class="modal-header"
  >
    <h2
      class="heading heading--size-h2"
    >
      Modal Title
    </h2>
  </div>
  <div
    class="modal-body"
  >
    Modal body content. This is an example use case with the stepper in the footer.
  </div>
  <div
    class="modal-footer footer--with-stepper"
  >
    <div
      class="modal-stepper"
    >
      <svg
        class="icon"
        fill="currentColor"
        height="0.5rem"
        role="img"
        style="--icon-size: 0.5rem;"
        width="0.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="12"
        >
          Step 1
        </title>
        <use
          xlink:href="test-file-stub#empty-circle"
        />
      </svg>
      <svg
        class="icon"
        fill="currentColor"
        height="0.5rem"
        role="img"
        style="--icon-size: 0.5rem;"
        width="0.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="13"
        >
          Active Step 2
        </title>
        <use
          xlink:href="test-file-stub#circle"
        />
      </svg>
      <svg
        class="icon"
        fill="currentColor"
        height="0.5rem"
        role="img"
        style="--icon-size: 0.5rem;"
        width="0.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="14"
        >
          Step 3
        </title>
        <use
          xlink:href="test-file-stub#empty-circle"
        />
      </svg>
      <svg
        class="icon"
        fill="currentColor"
        height="0.5rem"
        role="img"
        style="--icon-size: 0.5rem;"
        width="0.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="15"
        >
          Step 4
        </title>
        <use
          xlink:href="test-file-stub#empty-circle"
        />
      </svg>
      <svg
        class="icon"
        fill="currentColor"
        height="0.5rem"
        role="img"
        style="--icon-size: 0.5rem;"
        width="0.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="16"
        >
          Step 5
        </title>
        <use
          xlink:href="test-file-stub#empty-circle"
        />
      </svg>
    </div>
    <div
      class="button-group button-group--spacing-1x footer__button-group"
    >
      <button
        class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral button button--secondary"
        data-bootstrap-override="clickable-style-secondary"
        type="button"
      >
        Button 1
      </button>
      <button
        class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand button button--primary"
        data-bootstrap-override="clickable-style-primary"
        type="button"
      >
        Button 2
      </button>
    </div>
  </div>
</div>
`;

exports[`Modal WithoutHeaderAndFooter story renders snapshot 1`] = `
<div
  aria-label="The Modal Amazing Modal You've Ever Seen"
  aria-modal="true"
  class="modal"
  data-headlessui-state="open"
  id="headlessui-dialog-10"
  role="dialog"
>
  <div
    aria-hidden="true"
    class="modal__overlay"
    data-headlessui-state="open"
    id="headlessui-dialog-overlay-11"
  />
  <div
    class="modal__content modal__content--scrollable modal__content--md modal__content--lg"
  >
    <button
      class="modal__close-button"
      tabindex="0"
    >
      <svg
        class="icon modal__close-icon"
        fill="currentColor"
        height="1.5rem"
        role="img"
        style="--icon-size: 1.5rem;"
        width="1.5rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <title
          id="20"
        >
          close modal
        </title>
        <use
          xlink:href="test-file-stub#close"
        />
      </svg>
    </button>
    <div
      class="modal-body"
      tabindex="0"
    >
      <div>
        <p>
          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc aliquam diam quis dolor maximus, non tincidunt lacus facilisis. Praesent ac vestibulum diam. Sed ac orci fringilla, ullamcorper quam nec, elementum turpis. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Curabitur et vulputate leo. Phasellus convallis ante at augue iaculis, quis consectetur dolor placerat. Nulla ornare malesuada elit eu faucibus. Mauris ultricies tincidunt eleifend. Aliquam erat volutpat. Morbi nec ipsum sed sem facilisis tristique nec et ligula. Vivamus id feugiat sapien.
        </p>
        <p>
          Nam ac tincidunt arcu. Nam non metus sem. Morbi eleifend metus vel venenatis accumsan. Vestibulum pharetra, ante quis sollicitudin aliquam, orci ex pretium ipsum, congue rhoncus dui orci sed velit. Cras ac leo vel massa rutrum auctor eget sed orci. Aenean id nisi consectetur, dapibus tellus ut, finibus metus. Integer tristique est vitae lectus suscipit, ut vulputate est fringilla. Donec pharetra facilisis erat at venenatis. Etiam faucibus dignissim leo eget congue. Sed vehicula imperdiet neque id gravida. Proin volutpat tortor quis quam molestie, faucibus condimentum ante sagittis. Suspendisse sit amet luctus tellus. Suspendisse a sapien hendrerit eros dictum faucibus. Vivamus pretium vel sem faucibus tristique. Integer iaculis pellentesque nunc ac pellentesque.
        </p>
        <p>
          Integer mollis, urna eget sollicitudin laoreet, nunc elit facilisis urna, ut finibus est mi eu quam. Nam ac venenatis massa. Vestibulum suscipit ac ligula venenatis scelerisque. Fusce rutrum nulla lectus, sed dignissim ipsum faucibus sodales. Suspendisse id aliquet quam. Maecenas facilisis mauris dolor, id accumsan ex vehicula in. In nisl ligula, fringilla in enim nec, lobortis sollicitudin purus. Aliquam vehicula euismod enim quis finibus. Fusce ornare tortor malesuada, consequat magna quis, porta dolor. Donec quis nisl ac sem dictum semper quis vel turpis. Proin sed leo in ante rhoncus pellentesque a eu urna. Phasellus consequat lectus et hendrerit luctus. Lorem ipsum dolor sit amet, consectetur adipiscing elit.
        </p>
        <p>
          Suspendisse vitae eros elit. Maecenas id urna tempus, tempus turpis id, blandit turpis. Fusce augue quam, pellentesque et suscipit consectetur, pharetra in mi. Suspendisse non ultricies purus. Integer dignissim condimentum sem ac porta. Vivamus viverra congue massa, vitae fermentum est scelerisque et. Duis a urna vitae odio semper dictum a sed nisl. In fringilla hendrerit massa, at luctus arcu tincidunt nec. Donec gravida, mauris sit amet porta lobortis, justo sem vehicula ipsum, at pretium sem leo sed libero. Morbi tristique rhoncus suscipit. Nullam at malesuada sapien. Nam in egestas tellus. Nulla quis metus dui. Suspendisse sit amet nisi at lectus ultricies egestas.
        </p>
        <p
          class="long-text__last-paragraph"
        >
          Integer pulvinar felis sit amet dignissim fermentum. Nulla sodales enim mi, varius feugiat sapien congue eget. Morbi vitae ipsum non ligula eleifend molestie. Aenean bibendum tortor sapien, quis volutpat ante ultricies id. Morbi varius dolor ac ante posuere, sit amet tincidunt lectus pulvinar. Proin id efficitur neque. Nullam vel feugiat dui. Curabitur imperdiet lacinia eros, ac iaculis odio. Praesent quis pretium sapien, quis posuere lectus. Proin eleifend purus nec massa aliquam commodo. Quisque auctor suscipit ex sed tristique. Sed eget ultrices est. Suspendisse nunc justo, dapibus at eros ac, rutrum vestibulum est.
        </p>
      </div>
    </div>
  </div>
</div>
`;
